Omniauth-facebook config guide

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,7 @@
-lyricalBattle
+LyricalBattle
 =============
 
-LyricalBattle
+== Developer
+Set facebook config file config/config/initializers/facebook_token.rb.
+    FACEBOOK_APP_ID = "app_id"
+    FACEBOOK_SECRET = "secret"
